Server and Client basic game loops
Server and client game loop starter code. Server responds when a client connects and disconnects

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <div>
         Loaded From Server
     </div>
+    <script data-main = "scripts/client/loader" src = "scripts/client/require.js"></script>
 </body>
 </html>
