Implemented Server and Client messaging system.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        Loaded From Server
+        <canvas id = "canvas-main" width = "600" height = "600" style = "background-color: rgb(0, 0, 0)"></canvas>
     </div>
     <script data-main = "scripts/client/loader" src = "scripts/client/require.js"></script>
 </body>
