--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Viewport.js Example</title>
+    <title>Multiplayer Snake</title>
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="800"></canvas>
-
+    <script data-main = "scripts/client/loader" src = "scripts/client/require.js"></script>
     <script src="viewport.js"></script>
 </body>
 </html>
