add socket.min.js to index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiplayer Snake</title>
+    <script src = "/node_modules/socket.io/client-dist/socket.io.min.js"></script>
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="800"></canvas>
