updated credits button functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <button id="controlsButton">Controls</button>
         <button id="creditsButton">Credits</button>
     </div>
+    <div id="creditsScreen" style="display: none;">
+        <h2>Credits</h2>
+        <p>Samuel Johnson</p>
+        <p>Levi Nielson</p>
+        <p>Wil Stika</p>
+    </div>
     <script data-main="scripts/client/loader" src="scripts/client/require.js"></script>
     <script src="viewport.js"></script>
     <script src="scripts/client/mainMenu.js"></script>
