fixed high score button functionality

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <input type="text" id="pauseKey" class="control-key-input" readonly onclick="setControlKey('pauseKey')"><br>
         <button id="saveControlsButton">Save</button>
     </div>
+    <div id = "highScoresScreen" style="display: none;">
+        <h2>High Scores</h2>
+        <ul id="highScoresList"></ul>
+    </div>
     
     <script data-main="scripts/client/loader" src="scripts/client/require.js"></script>
     <script src="viewport.js"></script>
