--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <ul id="highScoresList"></ul>
     </div>
     
-    <script data-main="scripts/client/loader" src="scripts/client/require.js"></script>
+    <script src="scripts/client/loader.js"></script>
+    <script data-main="scripts/client/mainMenu" src="scripts/client/require.js"></script>
     <script src="viewport.js"></script>
-    <script src="scripts/client/mainMenu.js"></script>
+
 </body>
 </html>
