Added game over message.
When called it displays the game over message with the kills, score, and top place, and has a main menu button. Also automatically updates high score

--- a/index.html
+++ b/index.html
@@ -40,8 +40,17 @@
         <h2>High Scores</h2>
         <ul id="highScoresList"></ul>
     </div>
+    <div id="gameOverMessage">
+        <div id="gameOverContent">
+            <h2>Game Over!</h2>
+            <p>Score: <span id="gameOverScore"></span></p>
+            <p>Kills: <span id="gameOverKills"></span></p>
+            <p>Highest Position: <span id="gameOverPosition"></span></p>
+            <button id="restartButton">Main Menu</button>
+        </div>
+    </div>
     
-    <script src="viewport.js"></script>
+    <!--<script src="viewport.js"></script>-->
     <script src="scripts/client/loader.js"></script>
     <script data-main="scripts/client/mainMenu" src="scripts/client/require.js"></script>
 
