Added player name enter and updated menu navigation functionality

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <input type="text" id="rightKey" class="control-key-input" readonly onclick="setControlKey('rightKey')"><br>
         <label for="downKey">Down:</label>
         <input type="text" id="downKey" class="control-key-input" readonly onclick="setControlKey('downKey')"><br>
-        <button id="saveControlsButton">Save</button>
+        <button id="saveControlsButton">Confirm</button>
     </div>
     <div id = "highScoresScreen" style="display: none;">
         <h2>High Scores</h2>
